[tool.poetry]
name = "bel"
version = "0.13.1"
description = ""
authors = ["William Hayes <william.s.hayes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tatsu = "^4.4.0"
jinja2 = "^2.10.3"
structlog = "^19.2.0"
pyyaml = "^5.3"
requests = "^2.22.0"
ulid-py = "^0.0.12"
timy = "^0.4.2"
requests-cache = "^0.5.2"
python-json-logger = "^0.1.11"
lxml = "^4.4.2"
python-arango = "^5.2.1"
jsonschema = "^3.2.0"
fastcache = "^1.1.0"
elasticsearch = "<7"
click = "^7.0"
cityhash = "^0.2.3"
python-dateutil = "2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "*"
mypy = "*"
ptpython = "*"
pytest-cache = "*"
pytest-cov = "*"
pytest-flakes = "*"
pytest-mypy = "*"
pytest-pep8 = "*"
pytest-sugar = "*"
Sphinx = "*"
sphinx-autobuild = "*"
sphinx-autodoc-typehints = "*"
sphinx-click = "*"
sphinx-rtd-theme = "*"
twine = "*"
pytest-env = "*"
pep8 = "*"
pylint = "*"
isort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
