# https://python-poetry.org/docs/cli/#add -- Use extras for adding in the API dependencies
#  If the package(s) you want to install provide extras, you can specify them when adding the package:
#        poetry add requests[security,socks]
#        poetry add "requests[security,socks]~=2.22.0"
#        poetry add "git+https://github.com/pallets/flask.git@1.1.1[dotenv,dev]"

[tool.poetry]
name = "bel"
version = "0.13.1"
description = "BEL - Biological Expression Language Python package - library code, CLI and API"
authors = ["William Hayes <william.s.hayes@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.7"
tatsu = "^4.4.0"
jinja2 = "^2.10.3"
structlog = "^19.2.0"
pyyaml = "^5.3"
requests = "^2.22.0"
ulid-py = "^0.0.12"
timy = "^0.4.2"
requests-cache = "^0.5.2"
python-json-logger = "^0.1.11"
lxml = "^4.4.2"
python-arango = "^5.2.1"
jsonschema = "^3.2.0"
fastcache = "^1.1.0"
click = "^7.0"
cityhash = "^0.2.3"
python-dateutil = "2.8.1"
elasticsearch = ">=6.0.0,<7.0.0"
black = "^19.10b0"


[tool.poetry.dev-dependencies]
coverage = "*"
mypy = "*"
pytest = "*"
pytest-cache = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-flakes = "*"
pytest-mypy = "*"
pytest-pep8 = "*"
pytest-sugar = "*"
Sphinx = "*"
sphinx-autobuild = "*"
sphinx-autodoc-typehints = "*"
sphinx-click = "*"
sphinx-rtd-theme = "*"
pep8 = "*"
pylint = "*"
pre-commit = "^1.21.0"
isort = {extras = ["pyproject"], version = "^4.3.21"}
detect-secrets = "^0.13.0"

[tool.black]
line-length = 100
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''


[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=100

import_heading_stdlib="Standard Library"
import_heading_thirdparty="Third Party Imports"
import_heading_firstparty="Local Imports"

known_third_party = ["arango", "cityhash", "click", "dateutil", "elasticsearch", "jinja2", "jsonschema", "lxml", "requests", "requests_cache", "setuptools", "sphinx_rtd_theme", "structlog", "tatsu", "timy", "ulid", "yaml"]









[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
